refactor: opt item response